# amazonka

./: Makefile
amazonka-conduit/: README.md  amazonka-conduit.cabal
amazonka-conduit/src/Network/AWS/: Conduit.hs
core/: amazonka-core.cabal
core/src/Network/AWS/Sign/V4/: Chunked.hs
