name:                  amazonka-conduit
version:               1.4.3
synopsis:              Comprehensive Amazon Web Services SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2016 Brendan Hay
category:              Network, AWS, Cloud, Conduit
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Pending.

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:       -Wall

    exposed-modules:

    build-depends:
          amazonka            == 1.4.3.*
        , amazonka-core       == 1.4.3.*
        , base                >= 4.7 && < 5
        , bytestring          >= 0.9
        , conduit             >= 1.1
        , conduit-extra       >= 1.1
        , directory           >= 1.2
        , exceptions          >= 0.6
        , http-conduit        >= 2.2 && < 3
        , ini                 >= 0.3.5
        , mmorph              >= 1
        , monad-control       >= 1
        , mtl                 >= 2.1.3.1
        , resourcet           >= 1.1
        , retry               >= 0.7
        , text                >= 1.1
        , time                >= 1.2
        , transformers        >= 0.2
        , transformers-base   >= 0.4
        , transformers-compat >= 0.3
